# wmonad

./: LICENSE  Main.hs  README.md  default.nix  manual_test  shell.nix  wmonad.cabal
src/WMonad/: Config.hs  Core.hs  Display.hs  Geometry.hs  Main.hs  Operations.hs  Pane.hs  Stack.hs  Types.hs  Util.hs  W.hs  Windows.hs
src/WMonad/Pane/: Draw.hs
src/WMonad/Types/: Abstract.hs  Concrete.hs
src/WMonad/Types/Abstract/: Draw.hs  Operations.hs
src/WMonad/Types/Abstract/Operations/: Gen.hs
src/WMonad/Types/Concrete/: Operations.hs
src/WMonad/Types/Concrete/Operations/: Gen.hs
src/WMonad/Util/: X.hs
tests/: Properties.hs  Scratch.hs
