Name:                wmonad
Version:             0.1
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library

  hs-source-dirs:    src

  exposed-modules:   WMonad.Main
                   , WMonad.Core
                   , WMonad.Operations
                   , WMonad.Geometry

                   , WMonad.Stack
                   , WMonad.Pane
                   , WMonad.Pane.Draw
                   , WMonad.Display
                   , WMonad.W

                   , WMonad.Util
                   , WMonad.Util.X
                   , WMonad.Config

  build-depends:     base

                   , mtl
                   , transformers
                   , lens
                   , semigroupoids
                   , data-default
                   , array
                   , containers
                   , text

                   , xhb
                   , xhb-keysyms
                   , xhb-monad
                   , xhb-event-queue
                   , xhb-mapping-state
                   , xhb-atom-cache

                   , monad-logger

                   , unix
                   , process
                   , setlocale


executable wmonad
  main-is:           Main.hs
  build-depends:     base, wmonad


test-suite properties
  type:             exitcode-stdio-1.0
  main-is:          Properties.hs
  hs-source-dirs:   tests
  build-depends:    base
                  , mtl
                  , containers
                  , lens
                  , wmonad
